docs: minor changes to CONTRIBUTING.md