@@ -6,9 +6,11 @@ Find the built extension at `build/libs/qupath-edu-extension-[version].jar`
 
 # Setting up your development environment
 
-If you wish to run QuPath with the latest version of the extension and/or use any debugging tools provided by your IDE, then follow these instructions.
+If you wish to run the development version of the extension and/or use any debugging tools provided by your IDE, then follow these instructions. 
 
-1. Download the JavaFX SDK from here [https://gluonhq.com/products/javafx/](https://gluonhq.com/products/javafx/)
+**These instructions are written for IntelliJ and may differ slightly for other editors.**
+
+1. Download the JavaFX 17.0.2 SDK from here [https://gluonhq.com/products/javafx/](https://gluonhq.com/products/javafx/) and extract it
 2. Add the following to your **Run/Debug Configuration**:
 
 **Main class:** `qupath.lib.gui.QuPathApp`
@@ -23,6 +25,11 @@ If you wish to run QuPath with the latest version of the extension and/or use an
 --add-exports=javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED
 --add-exports=javafx.web/com.sun.javafx.webkit=ALL-UNNAMED
 --add-exports=javafx.controls/com.sun.javafx.scene.control.skin=ALL-UNNAMED
+--add-exports=javafx.graphics/com.sun.javafx.css=ALL-UNNAMED
+--add-opens=javafx.base/javafx.beans.property=ALL-UNNAMED
+--add-opens=javafx.base/com.sun.javafx.binding=ALL-UNNAMED
 ```
 
-_NB: Remember to change the `[JavaFX SDK]` to the SDK installation path_
+**_NB: Change the `[JavaFX SDK]` to the path where you extracted the JavaFX SDK_**
+
+![IntelliJ Run/Debug Configuration example](http://static.yli-hallila.fi/qupathedudocs/IDEA%20Configuration.png)
